# LensTools

./: .coveragerc  .gitignore  .travis.yml  16_parameter_points.txt  CLAUDE.md  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  README.rst  README_short.rst  analysis.pkl  convergence_z103.fit  convergence_z108.fit  convergence_z113.fit  convergence_z118.fit  convergence_z12.fit  convergence_z123.fit  convergence_z128.fit  convergence_z133.fit  convergence_z139.fit  convergence_z144.fit  convergence_z15.fit  convergence_z150.fit  convergence_z18.fit  convergence_z20.fit  convergence_z23.fit  convergence_z26.fit  convergence_z29.fit  convergence_z32.fit  convergence_z36.fit  convergence_z39.fit  convergence_z42.fit  convergence_z45.fit  convergence_z49.fit  convergence_z52.fit  convergence_z55.fit  convergence_z59.fit  convergence_z63.fit  convergence_z66.fit  (+24 more)
LT_Data/: ._flexionCatalog_SIS.pkl  ee4e-7.txt  fiducial  mask.fit  plane.fits  unmasked.fit  v_si8_0.850
Paper/: aas_macros.sty  paper.tex  ref.bib
Test/: README.md  clean  matplotlibrc  test_constraints.py  test_convergence.py  test_design.py  test_gadget.py  test_indexing.py  test_limber.py  test_map.py  test_mask.py  test_minkowski.py  test_nicaea.py  test_noise.py  test_peaks.py  test_pipeline.py  test_plane.py  test_power_spectrum.py  test_ray.py  test_shear.py  test_statistics.py
docs/: Makefile
examples/: confidence_contours.py  design.py  eb_decomposition.py  gadget_io.py  gaussian_random_field.py  gaussianity.py  histograms.py  power_spectrum.py
lenstools/: __init__.py  catalog.py  constraints.py  contours.py  convergence.py  defaults.py  fft.py  index.py  limber.py  mpi.py  noise.py  observations.py  rfftfreq.py  shear.py  simulations.py  statistics.py  topology.py  utils.py
source/: conf.py  (+2 more)
(+572 files in other folders)
